# mesh

./: -a  .env  .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AIF Implementation Enhancements for Agora, Arguments, and Dialogue Modules.txt  AIFARGUMENTSLISTPRO_PERFORMANCE_OPTIMIZATION.md  AIFIntegrationRoadmap.txt  AIF_API_ENDPOINT_TESTING_RESULTS.md  AIF_API_TESTING_GUIDE.md  AIF_CORRESPONDENCE_PHASE2.md  AIF_DIAGRAM_INTEGRATION_PLAN.md  AIF_DIAGRAM_SYSTEM_ANALYSIS.md  AIF_DIALOGICAL_ACTIONS_FIX_SPEC.md  AIF_DIALOGUE_INTEGRATION_QUICK_REFERENCE.md  API_REVIEW_AIF_ENDPOINTS.md  ARCHITECTURE_REVIEW_ALIGNMENT.md  ARCHIVE_STRATEGY.md  ARGUMENTCARDV2_ATTACK_DISPLAY_FIX.md  ARGUMENT_ACTIONS_TESTING_GUIDE.md  ARGUMENT_ATTACK_MODAL_COMPLETE.md  ARGUMENT_CHAIN_CONSTRUCTOR_DESIGN.md  ARGUMENT_CHAIN_IMPLEMENTATION_ROADMAP_PHASE2.md  ARGUMENT_CHAIN_IMPLEMENTATION_ROADMAP_PHASE3.md  ARGUMENT_CHAIN_IMPLEMENTATION_ROADMAP_PHASE3_REVISED.md  ARGUMENT_CHAIN_IMPLEMENTATION_ROADMAP_PHASE4.md  ARGUMENT_CHAIN_NARRATIVE_EXPORT_ROADMAP.md  ARGUMENT_CHAIN_PHASE2_COMPLETE.md  ARGUMENT_CHAIN_TASK_3.1_COMPLETE.md  ARGUMENT_CHAIN_TASK_3.6_COMPLETE.md  ARGUMENT_CQ_INTEGRATION_COMPLETE.md  ARGUMENT_NET_CONCEPTUAL_AUDIT.md  ASPIC_IMPLEMENTATION_TODO.md  ASPIC_PHASE1B2_COMPLETION_STATUS.md  ASPIC_PHASE1B4_TESTING_STATUS.md  ASPIC_PHASE1B_COMPLETION_STATUS.md  ASPIC_PHASE1C_TRANSPOSITION_PLAN.md  (+258 more)
services/embedding/: Dockerfile.dev  README.md  docker-compose.yml  grpc_server.py  main.py  model.py  pyproject.toml
services/ranker/: Dockerfile  feature_fetcher.py  (+5 more)
(+5204 files in other folders)
