[tool.poetry]
name = "embedding"
version = "0.1.0"
description = "User embedding microservice"
authors = ["Mesh"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^1.10"
gensim = "^4.3"
grpcio = "^1.59"
grpcio-tools = "^1.59"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
httpx = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
