[tool.poetry]
name = "ranker"
version = "0.1.0"
description = "LightGBM ranker service"
authors = ["Mesh"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
lightgbm = "^4.3"
grpcio = "^1.59"
prometheus-client = "^0.20"
redis = "^5.0"
mlflow = "^2.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
grpcio-testing = "^1.59"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
